tests/errors/deref_non_pointer.cyrus
import std::libc{printf};

pub fn main() {
    const x = 20;
    const y = *x;
    //~^ ERROR Cannot dereference non-pointer value
    printf("%d\n", y);
}
